--- a/pwdgrtr/templates/generatorapp/about.html
+++ b/pwdgrtr/templates/generatorapp/about.html
@@ -1,10 +1,30 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+<head><title>Password Generator</title></head>
 
 <div class="container text center">
 
-<h1>About</h1>
+<h1 style="color: darkslategrey;">About</h1>
 
-<p>This is a password generator created by SARTHAK SATPATHY .</p>
+     
+    Creator - Sarthak Satpathy .
+    <br>  
+    <br>
+    Email - sarthaksatpathy.satpathy337@gmail.com .
+    <br>
+    <br>
+    Contact - 9938962857 .
+    <br>
+    <br>
+    <a  href="https://twitter.com/SarthakSatpath1?s=08" target="_blank">Twitter</a>
+    <br>
+    <br>
+    <a  href="https://www.linkedin.com/in/sarthak-satpathy-396aa91a0" target="_blank">LinkedIn</a>
+    <br>
+    <br>
+    <a  href="https://instagram.com/_s.a.r.t.h.a.k__?igshid=nvxabb5mdlv1" target="_blank">Instagram</a>
+    <br>
+    <br>
+    <br>
+
 <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
 </div>
