--- a/pwdgrtr/templates/generatorapp/home.html
+++ b/pwdgrtr/templates/generatorapp/home.html
@@ -1,8 +1,12 @@
+<head><title>Password Generator</title></head>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <div class="container text-center">
-<h1> PASSWORD GENERATOR </h1>
+<h1 style="color:rgb(238, 6, 53)">Generate Your Password</h1>
+_______________________________________________________________________________________________________________________________________________________
 <br>
 <br>
+<h3 style="color: rgb(85, 16, 112);">Length</h3>
 <form action="{% url 'password' %}">
     <select name="length">
         <option value="5">5</option>
@@ -13,23 +17,31 @@
         <option value="10">10</option>
         <option value="11">11</option>
         <option value="12" selected="selected">12</option>
-    </select> Length
+    </select>
     <br>
+    _______________________________________________________________________________________________________________________________________________________
     <br>
-    <input type="checkbox" name="uppercase">UPPERCASE
+    <input type="checkbox" name="uppercase">  Uppercase
     <br>
+    _______________________________________________________________________________________________________________________________________________________
     <br>
-    <input type="checkbox" name="numbers">NUMBERS
+    <input type="checkbox" name="numbers">  Number
     <br>
+    _______________________________________________________________________________________________________________________________________________________
     <br>
-    <input type="checkbox" name="special characters">SPECIAL_CHARACTERS
+    <input type="checkbox" name="special characters">  Special Characters
+    <br>
+    _______________________________________________________________________________________________________________________________________________________
     <br>
     <br>
     <input type="Submit" value="Generate Password" class="btn btn-primary">
     <br>
     <br>
+    _______________________________________________________________________________________________________________________________________________________
     <br>
     <br>
-    <a href="{%url 'about' %}"class="btn btn-warning">About the Page</a>
+    <a href="{%url 'about' %}"class="btn btn-warning">About the creator</a>
+
+    _______________________________________________________________________________________________________________________________________________________
 </div>
 </form> 
