--- a/pwdgrtr/templates/generatorapp/password.html
+++ b/pwdgrtr/templates/generatorapp/password.html
@@ -1,7 +1,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+<head><title>Password Generator</title></head>
 <div class="container text center">
-    <h1>YOUR PASSWORD IS : </h1>
+    <h1 style="color: orangered;">Your Password Is : </h1>
     <h2 class="alert alert-success">{{password}}</h2>
+    Copy to use .
+    <br>
+    <br>
     <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
 </div>
